// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React: subscribe 1`] = `
<div
  initialized={false}
>
  {"object":null}
</div>
`;

exports[`React: subscribe 2`] = `
<div
  initialized={false}
>
  {"object":null}
</div>
`;

exports[`React: subscribe 3`] = `
<div
  initialized={true}
>
  {"object":null}
</div>
`;

exports[`React: subscribe 4`] = `
<div
  initialized={true}
>
  {"object":{"test":5}}
</div>
`;

exports[`React: subscribe 5`] = `
<div
  initialized={true}
>
  {"object":{"test":5}}
</div>
`;
